@@ -37,7 +37,7 @@ class TestColumns(unittest.TestCase):
         self.table = Table(self.rows, self.columns)
 
     def test_stringify(self):
-        self.assertEqual(str(self.table.columns['one']), "<agate.columns.Column: (1, 2, None)>")
+        self.assertEqual(str(self.table.columns['one']), "<agate.Column: (Decimal('1'), Decimal('2'), None)>")
 
     def test_stringify_long(self):
         rows = (
@@ -51,7 +51,12 @@ class TestColumns(unittest.TestCase):
 
         self.table = Table(rows, self.columns)
 
-        self.assertEqual(str(self.table.columns['one']), "<agate.columns.Column: (1, 2, None, 1, 2, ...)>")
+        self.assertEqual(str(self.table.columns['one']), "<agate.Column: (Decimal('1'), Decimal('2'), None, Decimal('1'), Decimal('2'), ...)>")
+
+    def test_repr(self):
+        self.table = Table(self.rows, self.columns)
+
+        self.assertEqual(repr(self.table.columns['one']), "<agate.Column: index=0 name='one' data_type=Number>")
 
     def test_length(self):
         self.assertEqual(len(self.table.columns), 3)
